# antidetect-browser-qt

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  FINGERPRINT_CONSISTENCY.md  GITHUB_ACTIONS_BUILD.md  HOW_TO_GET_WINDOWS_BUILD.txt  INSTALL-UBUNTU.txt  PROXY_GUIDE.md  QUICK_START_WINDOWS.md  README.md  README_WINDOWS_BUILD.txt  SECTA-AntiDetect-x86_64.AppImage  VPN_SUPPORT.md  build-windows.bat  build-windows.ps1  build_windows.sh  run_with_timezone_hook.sh  windows-toolchain.cmake
.github/workflows/: build-windows.yml
AppDir/: .DirIcon  AppRun  SECTAAntiDetect.desktop
SECTA-Linux-x64/: INSTALL-FIX.sh  README.txt  SECTAAntiDetect
src/: main.cpp
src/api/: ApiHandler.cpp  ApiHandler.h  RestApiServer.cpp  RestApiServer.h
src/automation/: BrowserAutomation.cpp  BrowserAutomation.h  CookieRobot.cpp  CookieRobot.h
src/core/: Application.cpp  Application.h  BrowserWindowManager.cpp  BrowserWindowManager.h  CookieManager.cpp  CookieManager.h  ProxyUrlRequestInterceptor.cpp  ProxyUrlRequestInterceptor.h
src/crypto/: Encryption.cpp  Encryption.h  PasswordHash.cpp  PasswordHash.h
src/fingerprint/: AudioSpoofing.cpp  AudioSpoofing.h  CanvasSpoofing.cpp  CanvasSpoofing.h  FingerprintManager.cpp  FingerprintManager.h  WebGLSpoofing.cpp  WebGLSpoofing.h
src/profiles/: Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  ProfileStorage.cpp  ProfileStorage.h  UserAgentDatabase.cpp  UserAgentDatabase.h
src/proxy/: ProxyChecker.cpp  ProxyChecker.h  ProxyManager.cpp  ProxyManager.h
src/stealth/: UndetectableStealth.cpp  UndetectableStealth.h
src/timezone_hook/: build.sh  timezone_hook.c
src/tls/: TLSFingerprintManager.cpp  TLSFingerprintManager.h
src/ui/: BrowserWindow.cpp  BrowserWindow.h  Dashboard.cpp  Dashboard.h  Dashboard.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProfileEditor.cpp  ProfileEditor.h  ProfileEditor.ui  ProxyImportDialog.cpp  ProxyImportDialog.h  VPNImportDialog.cpp  VPNImportDialog.h
src/vpn/: AmneziaWGParser.cpp  AmneziaWGParser.h  OpenVPNParser.cpp  OpenVPNParser.h  ShadowsocksParser.cpp  ShadowsocksParser.h  V2RayParser.cpp  V2RayParser.h  VPNManager.cpp  VPNManager.h  WireGuardParser.cpp  WireGuardParser.h
